Fixed apostrophe escaping on from page. Added CVS instructions to download page. Updated documentation page. Imported code guide into HTML version. Converted the VC++ instructions into HTML
git-svn-id: http://svn.code.sf.net/p/dangerdeep/code/trunk@1734 68f6b752-3551-0410-8fee-d3b2b286690f

--- a/dangerdeep-site/gallery.html
+++ b/dangerdeep-site/gallery.html
@@ -26,7 +26,7 @@
 		</ul>
 		<a href="http://validator.w3.org/check?uri=referer"><img class="std" src="images/xhtml.png" alt="XHTML Valid!" /></a>
 		<br />
-		<img class="std" src="images/w3c-valid-css.png" alt="Valid CSS!" />
+		<a href="http://jigsaw.w3.org/css-validator/check/referer"><img class="std" src="images/w3c-valid-css.png" alt="Valid CSS!" /></a>
 	</div>
 	<div class="contents">
 <h2 class="right">Screenshot Gallery</h2>
@@ -181,7 +181,7 @@
 <a href="gallery/screenshot14.png" title="Main menu"><img src="gallery/thumbnail14.png" alt="Main menu" width="128" height="96" /></a>
 </div>
 	</div>
-	<div class="foot">&copy; 2006 Danger from the Deep</div>
+	<div class="foot">&copy; 2006-2007 Danger from the Deep</div>
 	</div>
 </body>
 </html>
