--- a/dangerdeep-site/help_out.html
+++ b/dangerdeep-site/help_out.html
@@ -26,7 +26,7 @@
 		</ul>
 		<a href="http://validator.w3.org/check?uri=referer"><img class="std" src="images/xhtml.png" alt="XHTML Valid!" /></a>
 		<br />
-		<img class="std" src="images/w3c-valid-css.png" alt="Valid CSS!" />
+		<a href="http://jigsaw.w3.org/css-validator/check/referer"><img class="std" src="images/w3c-valid-css.png" alt="Valid CSS!" /></a>
 	</div>
 	<div class="contents">
 		<h2 class="right">Helping out</h2>
@@ -98,7 +98,7 @@
 		<h3>Final words</h3>
 		<p>Phew! What a big list, you should note that it is not inclusive, if you feel that you have a contribution that you want to make then please contact us.</p>
 	</div>
-	<div class="foot">&copy; 2006 Danger from the Deep</div>
+	<div class="foot">&copy; 2006-2007 Danger from the Deep</div>
 	</div>
 </body>
 </html>
