--- a/dangerdeep-site/documentation.html
+++ b/dangerdeep-site/documentation.html
@@ -26,13 +26,51 @@
 		</ul>
 		<a href="http://validator.w3.org/check?uri=referer"><img class="std" src="images/xhtml.png" alt="XHTML Valid!" /></a>
 		<br />
-		<img class="std" src="images/w3c-valid-css.png" alt="Valid CSS!" />
+		<a href="http://jigsaw.w3.org/css-validator/check/referer"><img class="std" src="images/w3c-valid-css.png" alt="Valid CSS!" /></a>
 	</div>
 	<div class="contents">
 		<h2 class="right">Documentation</h2>
 		<p>We have some somewhere.... honest...</p>
+		<p>OK, jokes aside we have documentation for both end-users and developers, first up, the users.</p>
+		<h3>User documentation</h3>
+		<p>This is still being worked on, and update should follow shortly.</p>
+<!--
+		We have a user-guide available in the following formats:
+		<ul>
+			<li><a href="#">In PDF format</a></li>
+			<li><a href="#">In native Scibus format (.sla.gz)</a></li>
+		</ul>
+		<p>Note: if you want to make changes to this document please use the CVS version.</p>
+-->
+
+		<h3>Developer documentation</h3>
+		<h4>Code Guid</h4>
+		<p>There is the code guide which is a must read for anyone interested in contributing code</p>
+		<ul>
+			<li><a href="./documentation/codeguide.pdf">In PDF format</a></li>
+			<li><a href="./documentation/codeguide.tex">In TEX format</a></li>
+			<li><a href="./codeguide.html">In HTML format</a></li>
+		</ul>
+		<h4>Building on windows (win32)</h4>
+		<p>If you are trying to build on windows please check the <a href="./vcpp_build_howto.html">VC++ How-to</a>.</p>
+
+		<h4>Translating</h4>
+		<p>For people interested in translating DftD into their own native tongue there is a guide on how-to translated DftD</p>
+		<ul>
+			<li><a href="./documentation/translation.pdf">In PDF format</a></li>
+			<li><a href="./documentation/translation.tex">In TEX format</a></li>
+		</ul>
+		<h4>Reference/Misc.</h4>
+		<p>We also have a lot of reference material that has been collected by various people</p>
+		<ul>
+			<li><a href="./documentation/dftd_torpedo_reference_rev.1.0.pdf">Torpedo reference (.pdf)</a></li>
+			<li><a href="./documentation/dftd_torpedo_reference_rev.1.0.djvu">Torpedo reference in déjà vu format (.djvu)</a></li>
+			<li><a href="./documentation/sonar.pdf">Sonar reference and implementation details (.pdf)</a></li>
+			<li><a href="./documentation/sonar.tex">Sonar reference and implementation details (.tex)</a></li>
+			<li><a href="./documentation/vc2005.zip">Visual C++ 2005 Express Edition build files (.zip)</a></li>
+		</ul>
 	</div>
-	<div class="foot">&copy; 2006 Danger from the Deep</div>
+	<div class="foot">&copy; 2006-2007 Danger from the Deep</div>
 	</div>
 </body>
 </html>
