--- a/dangerdeep-site/download.html
+++ b/dangerdeep-site/download.html
@@ -26,7 +26,7 @@
 		</ul>
 		<a href="http://validator.w3.org/check?uri=referer"><img class="std" src="images/xhtml.png" alt="XHTML Valid!" /></a>
 		<br />
-		<img class="std" src="images/w3c-valid-css.png" alt="Valid CSS!" />
+		<a href="http://jigsaw.w3.org/css-validator/check/referer"><img class="std" src="images/w3c-valid-css.png" alt="Valid CSS!" /></a>
 	</div>
 	<div class="contents">
 		<h2 class="right">Downloads</h2>
@@ -45,13 +45,38 @@
 			<li>Debian unstable:- <a href="http://prdownloads.sourceforge.net/dangerdeep/dangerdeep_0.2.0_i386.deb?download">dangerdeep_0.2.0_i386.deb</a></li>
 			<li>Gentoo ebuild:- <a href="http://dangerdeep.sourceforge.net/dangerdeep-0.2.0.ebuild">dangerdeep-0.2.0.ebuild</a></li>
 			<li>FreeBSD port:- <a href="ftp://ftp.freebsd.org/pub/FreeBSD/ports/i386/packages-7-current/games/dangerdeep-0.2.0.tbz">dangerdeep-0.2.0.tbz</a></li>
+			<li>For Gentoo please use portage.</li>
 			<li>(OLD) Mandrake(10.2):- <a href="http://prdownloads.sourceforge.net/dangerdeep/dangerdeep-0.1.0-1mdk.i586.rpm?download">dangerdeep-0.1.0-1mdk.i586.rpm</a></li>
 			<li>(OLD) Generic RPM:- <a href="http://prdownloads.sourceforge.net/dangerdeep/dangerdeep-0.1.0-1mdk.src.rpm?download">dangerdeep-0.1.0-1mdk.src.rpm</a></li>
 		</ul>
 		<p>Packages marked (OLD) are looking for new maintainers, these packages are out of date and their use is discouraged.</p>
 
+		<h3>CVS</h3>
+		<p>If you are feeling brave and want to compile the latest version from the repository you can get the code and data by running the commands:</p>
+		<div class="code">cvs -d:pserver:anonymous@dangerdeep.cvs.sourceforge.net:/cvsroot/dangerdeep login</div>
+		<p>When prompted for a password for anonymous, simply press the Enter key. Then to checkout the files:</p>
+		<div class="code">cvs -z3 -d:pserver:anonymous@dangerdeep.cvs.sourceforge.net:/cvsroot/dangerdeep co -P dangerdeep</div>
+		<p>This will print out lots of things but when it is done and has returned a prompt you should have a folder called dangerdeep. To update the checkout simply make sure you are in the dangerdeep folder and run:</p>
+		<div class="code">cvs update</div>
+		<p>We use the build system scons, so to compile a debug version try the command:</p>
+		<div class="code">scons debug=1 usex86sse=-1 datadir=/path/to/cvs/dangerdeep/data</div>
+		<p>Explanation of the options:</p>
+		<ul>
+			<li>debug=1 Makes the build debug (valid values are 0-3)</li>
+			<li>usex86sse=-1 Disables use of any SSE instructions</li>
+			<li>datadir=/path/to/cvs/dangerdeep/data Set this to the path of were you did your CVS checkout otherwise you may encounter issues of the game using either old or non-existent data files and then crashing</li>
+		</ul>
+
+		<div class="ie_center">
+		<div class="text_header">
+		<img class="left" src="images/dialog-warning.gif" alt="Warning!" />
+		<img class="right" src="images/dialog-warning.gif" alt="Warning!" />
+		<h2 class="center">Warning</h2>
+		</div>
+		</div>
+		<p>The CVS version <em>IS</em> experimental, it may drink your milk, steal your cats or do other unexpected things (it shouldn't but it might, so just be warned).</p>
 	</div>
-	<div class="foot">&copy; 2006 Danger from the Deep</div>
+	<div class="foot">&copy; 2006-2007 Danger from the Deep</div>
 	</div>
 </body>
 </html>
