--- a/dangerdeep-site/features.html
+++ b/dangerdeep-site/features.html
@@ -26,7 +26,7 @@
 		</ul>
 		<a href="http://validator.w3.org/check?uri=referer"><img class="std" src="images/xhtml.png" alt="XHTML Valid!" /></a>
 		<br />
-		<img class="std" src="images/w3c-valid-css.png" alt="Valid CSS!" />
+		<a href="http://jigsaw.w3.org/css-validator/check/referer"><img class="std" src="images/w3c-valid-css.png" alt="Valid CSS!" /></a>
 	</div>
 	<div class="contents">
 		<h2 class="right">Features</h2>
@@ -68,7 +68,7 @@
 		<h3>Our goal</h3>
 		<p>We want to create a simulation that is realistic and interesting to play, with good graphics and sounds but more of an emphasis on strategy and realism. The game's purpose is not to glorify war, but to understand strategy and tactics. Our hope is that the final version will include network play and wolf-pack or destroyer versus submarine matches.</p>
 	</div>
-	<div class="foot">&copy; 2006 Danger from the Deep</div>
+	<div class="foot">&copy; 2006-2007 Danger from the Deep</div>
 	</div>
 </body>
 </html>
