--- a/dangerdeep-site/index.html
+++ b/dangerdeep-site/index.html
@@ -26,7 +26,7 @@
 		</ul>
 		<a href="http://validator.w3.org/check?uri=referer"><img class="std" src="images/xhtml.png" alt="XHTML Valid!" /></a>
 		<br />
-		<img class="std" src="images/w3c-valid-css.png" alt="Valid CSS!" />
+		<a href="http://jigsaw.w3.org/css-validator/check/referer"><img class="std" src="images/w3c-valid-css.png" alt="Valid CSS!" /></a>
 	</div>
 	<div class="contents">
 		<h2 class="right">Danger from the Deep</h2>
@@ -39,9 +39,9 @@
 			<li>FreeBSD (x86-64/sparc64/IA64)</li>
 			<li>MacOS X (ppc64)</li>
 		</ul>
-		<p>This game is planned as tactical simulation and will be as realistic as our time and knowledge of physics allows. It\'s current state is ALPHA, but it is playable. If anyone want\'s to contribute in development, you\'re welcome, just email the dangerdeep-devel mailing list. Contributing binary packages for various Linux distributions would also be much appreciated.</p>
+		<p>This game is planned as tactical simulation and will be as realistic as our time and knowledge of physics allows. It's current state is ALPHA, but it is playable. If anyone want's to contribute in development, you're welcome, just email the dangerdeep-devel mailing list. Contributing binary packages for various Linux distributions would also be much appreciated.</p>
 	</div>
-	<div class="foot">&copy; 2006 Danger from the Deep</div>
+	<div class="foot">&copy; 2006-2007 Danger from the Deep</div>
 	</div>
 </body>
 </html>
