--- a/dangerdeep-site/links.html
+++ b/dangerdeep-site/links.html
@@ -26,12 +26,12 @@
 		</ul>
 		<a href="http://validator.w3.org/check?uri=referer"><img class="std" src="images/xhtml.png" alt="XHTML Valid!" /></a>
 		<br />
-		<img class="std" src="images/w3c-valid-css.png" alt="Valid CSS!" />
+		<a href="http://jigsaw.w3.org/css-validator/check/referer"><img class="std" src="images/w3c-valid-css.png" alt="Valid CSS!" /></a>
 	</div>
 	<div class="contents">
 	<h2 class="right">Links</h2>
 	<p>Danger from the Deep development is sponsored by:</p>
-	<a href=""><img src="images/nws.gif" alt="Naval Warfare Simulations, official sponsor of Danger from the Deep" style="border-width: 0px;" /></a>
+	<a href="http://www.navalwarfare.net/"><img src="images/nws.gif" alt="Naval Warfare Simulations, official sponsor of Danger from the Deep" style="border-width: 0px;" /></a>
 	<p>Danger from the Deep links</p>
 	<ul>
 		<li><a href="http://www.sourceforge.net/projects/dangerdeep">SourceForge project page</a></li>
@@ -50,7 +50,7 @@
 		<li><a href="http://www.das-fiese-ding.de/">Das fiese Ding</a>:- Just visit it (German)</li>
 	</ul>
 	</div>
-	<div class="foot">&copy; 2006 Danger from the Deep</div>
+	<div class="foot">&copy; 2006-2007 Danger from the Deep</div>
 	</div>
 </body>
 </html>
