--- a/dangerdeep-site/news.html
+++ b/dangerdeep-site/news.html
@@ -26,7 +26,7 @@
 		</ul>
 		<a href="http://validator.w3.org/check?uri=referer"><img class="std" src="images/xhtml.png" alt="XHTML Valid!" /></a>
 		<br />
-		<img class="std" src="images/w3c-valid-css.png" alt="Valid CSS!" />
+		<a href="http://jigsaw.w3.org/css-validator/check/referer"><img class="std" src="images/w3c-valid-css.png" alt="Valid CSS!" /></a>
 	</div>
 	<div class="contents">
 <h1>Latest News</h1>
@@ -217,7 +217,7 @@ on 2003-02-18 00:22</p>
 
 <p>code and data of version 0.0.5 (and newer) is now available at the CVS repository. CVS code may be much newer than releases, e.g. 0.0.10 was months after 0.0.9 with MANY changes.</p>
 	</div>
-	<div class="foot">&copy; 2006 Danger from the Deep</div>
+	<div class="foot">&copy; 2006-2007 Danger from the Deep</div>
 	</div>
 </body>
 </html>
