--- a/dangerdeep-site/warning.html
+++ b/dangerdeep-site/warning.html
@@ -26,7 +26,7 @@
 		</ul>
 		<a href="http://validator.w3.org/check?uri=referer"><img class="std" src="images/xhtml.png" alt="XHTML Valid!" /></a>
 		<br />
-		<img class="std" src="images/w3c-valid-css.png" alt="Valid CSS!" />
+		<a href="http://jigsaw.w3.org/css-validator/check/referer"><img class="std" src="images/w3c-valid-css.png" alt="Valid CSS!" /></a>
 	</div>
 	<div class="contents">
 	<div class="ie_center">
@@ -42,7 +42,7 @@
 
 	<p>These include, but are not limited to; the 2D and 3D artwork, the music/soundtrack and other miscellaneous audio/video/multimedia sequences. These are licensed under the CC At-Nc-Nd 2.0/2.5 and cannot be sold without prior consent from the copyright holders.</p>
 	</div>
-	<div class="foot">&copy; 2006 Danger from the Deep</div>
+	<div class="foot">&copy; 2006-2007 Danger from the Deep</div>
 	</div>
 </body>
 </html>
