Fixed typo's and spelling.
git-svn-id: http://svn.code.sf.net/p/dangerdeep/code/trunk@1735 68f6b752-3551-0410-8fee-d3b2b286690f

--- a/dangerdeep-site/documentation.html
+++ b/dangerdeep-site/documentation.html
@@ -44,7 +44,7 @@
 -->
 
 		<h3>Developer documentation</h3>
-		<h4>Code Guid</h4>
+		<h4>Code Guide</h4>
 		<p>There is the code guide which is a must read for anyone interested in contributing code</p>
 		<ul>
 			<li><a href="./documentation/codeguide.pdf">In PDF format</a></li>
