--- a/dangerdeep-site/vcpp_build_howto.html
+++ b/dangerdeep-site/vcpp_build_howto.html
@@ -29,9 +29,9 @@
 		<a href="http://jigsaw.w3.org/css-validator/check/referer"><img class="std" src="images/w3c-valid-css.png" alt="Valid CSS!" /></a>
 	</div>
 	<div class="contents">
-		<h2 class="right">HOWTO: Build DftD with Visual C++</h2>
+		<h2 class="right">HOW-TO: Build DftD with Visual C++</h2>
 		<p>This is a how-to build Danger From The Deep source using Visual C++ 2005 Express Edition for Windows</p>
-		<h3>Requitements</h3>
+		<h3>Requirements</h3>
 		<ol>
 			<li>Install Visual C++ 2005 Express Edition ( available <a href="http://msdn.microsoft.com/vstudio/express/visualc/download/">here</a> )</li>
 			<li>Install Microsoft Platform SDK ( available <a href="http://www.microsoft.com/msdownload/platformsdk/sdkupdate/">here</a> )</li>
@@ -60,8 +60,8 @@
 			For example:
 			<div class="code">"c:\ddbuild\SDL\lib";"c:\ddbuild\SDL_Image\lib";"c:\ddbuild\SDL_Mixer\lib";"c:\ddbuild\SDL_Net\lib";"c:\ddbuild\FFTW3";</div>
 			</li>
-			<li>Launch DDVC2005.sln and build the game executables in release or debug mode</li>
-			<li>Post build the executables will be in vc2005\debug or vc2005\release folder.</li>
+			<li>Launch DDVC2005.sln and build the game executable's in release or debug mode</li>
+			<li>Post build the executable's will be in vc2005\debug or vc2005\release folder.</li>
 			<li>Copy the exes to the dangerdeep install dir and run the game :-)</li>
 		</ol>
 		
