--- a/dangerdeep-site/documentation.html
+++ b/dangerdeep-site/documentation.html
@@ -48,8 +48,8 @@
 		<p>There is the code guide which is a must read for anyone interested in contributing code</p>
 		<ul>
 			<li><a href="./documentation/codeguide.pdf">In PDF format</a></li>
-			<li><a href="./documentation/codeguide.tex">In TEX format</a></li>
 			<li><a href="./codeguide.html">In HTML format</a></li>
+			<li>Document source is available in CVS</li>
 		</ul>
 		<h4>Building on windows (win32)</h4>
 		<p>If you are trying to build on windows please check the <a href="./vcpp_build_howto.html">VC++ How-to</a>.</p>
@@ -58,7 +58,7 @@
 		<p>For people interested in translating DftD into their own native tongue there is a guide on how-to translated DftD</p>
 		<ul>
 			<li><a href="./documentation/translation.pdf">In PDF format</a></li>
-			<li><a href="./documentation/translation.tex">In TEX format</a></li>
+			<li>Document source is available in CVS</li>
 		</ul>
 		<h4>Reference/Misc.</h4>
 		<p>We also have a lot of reference material that has been collected by various people</p>
@@ -66,7 +66,7 @@
 			<li><a href="./documentation/dftd_torpedo_reference_rev.1.0.pdf">Torpedo reference (.pdf)</a></li>
 			<li><a href="./documentation/dftd_torpedo_reference_rev.1.0.djvu">Torpedo reference in déjà vu format (.djvu)</a></li>
 			<li><a href="./documentation/sonar.pdf">Sonar reference and implementation details (.pdf)</a></li>
-			<li><a href="./documentation/sonar.tex">Sonar reference and implementation details (.tex)</a></li>
+			<li>Document source is available in CVS</li>
 			<li><a href="./documentation/vc2005.zip">Visual C++ 2005 Express Edition build files (.zip)</a></li>
 		</ul>
 	</div>
